--- a/assignment/assignment-10.x_features-backport/assignment-tool/tool/src/webapp/css/assignment.css
+++ b/assignment/assignment-10.x_features-backport/assignment-tool/tool/src/webapp/css/assignment.css
@@ -69,3 +69,92 @@
 	position: absolute;
 	z-index: 1000;
 }
+
+.reportIcon
+{
+	display:inline-block;
+	width:20px;
+}
+
+.disclosureTriangle
+{
+	vertical-align:top;
+}
+
+.assignmentUnsubmittable
+{
+	background-color: #900;
+	color: #fff;
+}
+
+.assignmentUnsubmittableAttachments
+{
+	background-color: #fdd;
+}
+
+.assignmentUnsubmittable, .assignmentUnsubmittableAttachments
+{
+	border: 1px solid #900;
+	padding: 0 10px 10px;
+	margin: 1em 0;
+}
+
+.assignmentUnsubmittable h3
+{
+	color: #fff;
+}
+
+.assignmentUnsubmittable .assignmentInline
+{
+	background-color: #fff;
+	border: 1px solid #eee;
+	color: #000;
+	margin-top: 10px;
+	max-height: 300px;
+	overflow-y: auto;
+	padding: 0 10px;
+}
+
+.assignmentWarning
+{
+	background: url('/library/skin/images/error.png') no-repeat left;
+	padding-left: 2em;
+}
+
+.assignmentAttachRadio
+{
+	margin: 2px;
+	height: 2.5em;
+}
+
+.assignmentAttachRadio input, .assignmentAttachRadio img
+{
+	vertical-align: bottom;
+}
+
+.assignmentAttachRadio input[type=file]
+{
+	position: relative;
+	top: 3px;
+}
+
+.assignmentAttachmentHighlight
+{
+	background-color: #ffe;
+}
+
+.assignmentAttachBox
+{
+	background-color: #eee;
+	padding: 10px;
+}
+
+.assignmentAttachBox h3
+{
+	margin: 0;
+}
+
+.assignmentRosette
+{
+	vertical-align: middle;
+}
