--- a/portal/portal-10.x_custom/portal-render-engine-impl/pack/src/webapp/vm/neoskin/includePageNav.vm
+++ b/portal/portal-10.x_custom/portal-render-engine-impl/pack/src/webapp/vm/neoskin/includePageNav.vm
@@ -22,38 +22,37 @@
 				<h1 class="skip" id="totoolmenu">${rloader.sit_toolshead}</h1>
 				<div id="toolMenu" role="navigation" aria-label="${rloader.sit_toolshead}">
 					<ul>
+                        #set( $category = "NONE" )
 			#foreach( $page in $sitePages.pageNavTools )
-		  		#if (${page.current})
-						<li class="selectedTool">
-							<a class="toolMenuLink #if(${page.hidden})hidden#end" title="${page.pageTitle}" role="presentation" aria-disabled="true">
-							<span class="toolMenuIcon ${page.menuClass} $!{page.menuClassOverride}"> </span><span class="menuTitle">${page.pageTitle}</span>
-							</a>
-						</li>
-		  		#else
-		  			 #if (${page.toolpopup})
-						<li>
-							<a class="toolMenuLink #if(${page.hidden})hidden#end" href="${page.pageRefUrl}?sakai.popup=yes" title="${page.description}" 
-							onclick="window.open('${page.toolpopupurl}');">
-							<span class="toolMenuIcon ${page.menuClass} $!{page.menuClassOverride}"></span><span class="menuTitle">${page.pageTitle}</span>
-							</a>
-						</li>
-					 #else
-		  			 #if (${page.ispopup})
-						<li>
-							<a class="toolMenuLink #if(${page.hidden})hidden#end" href="javascript:;" title="${page.pageTitle}" onclick="window.open('${page.pagePopupUrl}${page.pageId}','${page.jsPageTitle}','resizable=yes,toolbar=no,scrollbars=yes, width=1024,height=768')">
-							<span class="toolMenuIcon ${page.menuClass} $!{page.menuClassOverride}"> </span><span class="menuTitle">${page.pageTitle}</span>
-							</a>
-						</li>
-		   			#else
-						<li>
-							<a class="toolMenuLink #if(${page.hidden})hidden#end" href="${page.pageRefUrl}" title="${page.description}">
-							<span class="toolMenuIcon ${page.menuClass} $!{page.menuClassOverride}"></span><span class="menuTitle">${page.pageTitle}</span>
-							</a>
-						</li>
-		   			#end
-				    #end
-		  		#end
+                        #if(!$sitePages.pageNavType.equalsIgnoreCase("myworkspace") && ${page.category} != "NONE" && ${page.category} != $category)
+                            #set($category = ${page.category})
+                            </ul>
+                            <div class="category-title">${page.category}</div>
+                            <ul>
+                        #end
+
+                        #if (${page.current})
+                            <li class="selectedTool">
+                                <a class="toolMenuLink #if(${page.hidden})hidden#end" title="${page.pageTitle}" role="presentation" aria-disabled="true">
+                                <span class="toolMenuIcon ${page.menuClass} $!{page.menuClassOverride}">${page.pageTitle}</span>
+                                </a>
+                            </li>
+                        #else
+                            #if (${page.ispopup})
+                                <li>
+                                    <a class="toolMenuLink #if(${page.hidden})hidden#end" href="javascript:;" title="${page.pageTitle}" onclick="window.open('${page.pagePopupUrl}${page.pageId}','${page.jsPageTitle}','resizable=yes,toolbar=no,scrollbars=yes, width=800,height=600')">
+                                    <span class="toolMenuIcon ${page.menuClass} $!{page.menuClassOverride}">${page.pageTitle}</span>
+                                    </a>
+                                </li>
+                            #else
+                                <li>
+                                    <a class="toolMenuLink #if(${page.hidden})hidden#end" href="${page.pageRefUrl}" title="${page.description}">
+                                    <span class="toolMenuIcon ${page.menuClass} $!{page.menuClassOverride}">${page.pageTitle}</span>
+                                    </a>
+                                </li>
+                            #end
 			#end
+                        #end
 			#if ( $subSites && $showSubsitesAsFlyout ) 
                         <li>
 							<a id="toggleSubsitesLink" class="toolMenuLink" href="javascript:;" title="${rloader.subsitesTitle}" aria-haspopup="true">
