--- a/portal/portal-10.x_custom/portal-render-engine-impl/pack/src/webapp/vm/neoskin/includePageNav.vm
+++ b/portal/portal-10.x_custom/portal-render-engine-impl/pack/src/webapp/vm/neoskin/includePageNav.vm
@@ -34,20 +34,20 @@
                         #if (${page.current})
                             <li class="selectedTool">
                                 <a class="toolMenuLink #if(${page.hidden})hidden#end" title="${page.pageTitle}" role="presentation" aria-disabled="true">
-                                <span class="toolMenuIcon ${page.menuClass} $!{page.menuClassOverride}">${page.pageTitle}</span>
+                                <span class="toolMenuIcon ${page.menuClass} $!{page.menuClassOverride}"> </span><span class="menuTitle">${page.pageTitle}</span>
                                 </a>
                             </li>
                         #else
                             #if (${page.ispopup})
                                 <li>
                                     <a class="toolMenuLink #if(${page.hidden})hidden#end" href="javascript:;" title="${page.pageTitle}" onclick="window.open('${page.pagePopupUrl}${page.pageId}','${page.jsPageTitle}','resizable=yes,toolbar=no,scrollbars=yes, width=800,height=600')">
-                                    <span class="toolMenuIcon ${page.menuClass} $!{page.menuClassOverride}">${page.pageTitle}</span>
+                                    <span class="toolMenuIcon ${page.menuClass} $!{page.menuClassOverride}"></span><span class="menuTitle">${page.pageTitle}</span>
                                     </a>
                                 </li>
                             #else
                                 <li>
                                     <a class="toolMenuLink #if(${page.hidden})hidden#end" href="${page.pageRefUrl}" title="${page.description}">
-                                    <span class="toolMenuIcon ${page.menuClass} $!{page.menuClassOverride}">${page.pageTitle}</span>
+                                    <span class="toolMenuIcon ${page.menuClass} $!{page.menuClassOverride}"> </span><span class="menuTitle">${page.pageTitle}</span>
                                     </a>
                                 </li>
                             #end
@@ -56,7 +56,7 @@
 			#if ( $subSites && $showSubsitesAsFlyout ) 
                         <li>
 							<a id="toggleSubsitesLink" class="toolMenuLink" href="javascript:;" title="${rloader.subsitesTitle}" aria-haspopup="true">
-							    <span  class="toolMenuIcon icon-sakai-subsite"> </span><span class="menuTitle">${rloader.subsites}</span>
+							    <span class="toolMenuIcon ${page.menuClass} $!{page.menuClassOverride}"></span><span class="menuTitle">${page.pageTitle}</span>
 							</a>
 						</li>
 			#end
