--- a/login/login-2.9.x_googleplus/login-render-engine-impl/pack/src/webapp/vm/defaultskin/xlogin.vm
+++ b/login/login-2.9.x_googleplus/login-render-engine-impl/pack/src/webapp/vm/defaultskin/xlogin.vm
@@ -23,7 +23,6 @@
 			<th colspan="2">${loginRequired}</th>
 		</tr>
 		<tr>
-			<td class="logo"></td>
 			<td class="form">
 				<form method="post" action="${action}" enctype="application/x-www-form-urlencoded">
 				#if (${notify})
@@ -52,6 +51,9 @@
 					</tr>
 					</table>
 				</form>
+			</td>
+			<td class="googleplus">
+				<a href="${googlePlusLoginUrl}" id="signInButton">Sign in with Google</a>
 			</td>
 		</tr>
 		</table>
