--- a/assignment/assignment-10.x_iRubric/assignment-tool/tool/src/webapp/vm/assignment/chef_assignments_student_view_submission.vm
+++ b/assignment/assignment-10.x_iRubric/assignment-tool/tool/src/webapp/vm/assignment/chef_assignments_student_view_submission.vm
@@ -265,6 +265,12 @@ function submitform(id)
 										($tlang.getString("grade.max") $assignment.getContent().getMaxGradePointDisplay())
 									#end
 								</strong>
+									
+								<!--for grading via an external scoring service, if enabled for an associated gradebook item -->
+								#if($scoringComponentEnabled)
+									#parse ("/vm/assignment/chef_assignments_scoring_agent.vm")	
+							    #end								
+						         
 							</td>
 						</tr>
 					#else
@@ -277,6 +283,12 @@ function submitform(id)
 								#if ($gradeTypeTable.get($assignment.getContent().getTypeOfGrade()) == $!tlang.getString("points"))
 									($tlang.getString("grade.max") $assignment.getContent().getMaxGradePointDisplay())
 								#end
+								
+								<!--for grading via an external scoring service, if enabled for an associated gradebook item -->
+								#if($scoringComponentEnabled)
+									#parse ("/vm/assignment/chef_assignments_scoring_agent.vm")	
+								#end
+						        
 							</td>
 						</tr>
 					#end
