--- a/site-manage/site-manage-10.x_customIrubric/site-manage-tool/tool/src/webapp/vm/sitesetup/chef_site-siteInfo-duplicate.vm
+++ b/site-manage/site-manage-10.x_customIrubric/site-manage-tool/tool/src/webapp/vm/sitesetup/chef_site-siteInfo-duplicate.vm
@@ -47,6 +47,12 @@
 										#end
 									</select> 
 								</p>
+							#if($scoringAgentOption)	
+								<p>
+									<input id="transferScoringData" type="checkbox" value="transferScoringData" name="selectScoringData">
+									<label for="transferScoringData">$tlang.getFormattedMessage("sitdup.dupscoredata", $scoringAgentName)</label>
+								</p>
+							#end
 						#end	
 					#if ($hasSiteSpecificQuota)
 					<h4>$tlang.getString("sitdup.duptit")</h4>
